--- a/site/config.toml
+++ b/site/config.toml
@@ -1,6 +1,6 @@
 baseurl = "/"
 languageCode = "en-us"
-title = "Casper Theme"
+title = "parsa hugo personal blog theme master"
 theme = "parsa-hugo-personal-blog-theme-master"
 disqusShortname = "spf13"
 # Enable Google Analytics by inserting your tracking code
