--- a/site/config.toml
+++ b/site/config.toml
@@ -1,7 +1,7 @@
 baseurl = "/"
 languageCode = "en-us"
-title = "parsa hugo personal blog theme master"
-theme = "parsa-hugo-personal-blog-theme-master"
+title = "Casper Theme"
+theme = "hugo-theme-Parsa"
 disqusShortname = "spf13"
 # Enable Google Analytics by inserting your tracking code
 googleAnalytics = ""
