--- a/site/config.toml
+++ b/site/config.toml
@@ -1,7 +1,7 @@
 baseurl = "/"
 languageCode = "en-us"
-title = "Casper Theme"
-theme = "hugo-theme-Parsa"
+title = "Simply Confessions"
+theme = "parsa-hugo-theme"
 disqusShortname = "spf13"
 # Enable Google Analytics by inserting your tracking code
 googleAnalytics = ""
